# vericlaim

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  conftest.py  pyproject.toml
backend/: config.py  main.py  schemas.py
backend/routes/: claims.py  review.py
backend/services/: claim_runner.py
evals/: CHANGELOG.md
evals/dashboards/: __init__.py  cost_latency.py  experiments.py  quality_trends.py  system_health.py
evals/metrics/: __init__.py  calibration.py  damage_metrics.py  document_metrics.py  pairwise_judge.py  rag_metrics.py
evals/perturbation/: __init__.py  audio_perturb.py  base.py  document_perturb.py  fraud_signal_inject.py  image_perturb.py
evals/runners/: __init__.py  adversarial_suite.py  base.py  component_suite.py  e2e_suite.py
frontend-claimant/: package-lock.json  package.json
frontend-claimant/app/: globals.css  layout.tsx  page.tsx
frontend-claimant/components/: ClaimStatusTracker.tsx  EvidencePanel.tsx  FileUpload.tsx  FraudSignalCard.tsx  NavLinks.tsx  OfficerDecisionPanel.tsx  ThemeToggle.tsx
frontend-officer/: .gitignore  package-lock.json  package.json
ingestion/: __init__.py  intake.py  models.py  router.py
orchestration/: __init__.py  graph.py  orchestrator.py  state.py
tests/: test_circuit_breaker.py  test_component_suite.py  test_damage_assessor.py  test_degradation.py  test_document_extractor.py  test_document_metrics.py  test_evals.py  test_graph.py  test_intake.py  test_phase3_nodes.py  test_phase4_llmops.py  test_rag.py  test_retry.py  test_state.py  test_state_store.py  test_trace_store.py
(+56 files in other folders)
