[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vericlaim"
version = "0.1.0"
description = "Multi-modal insurance claims triage and adjudication system"
requires-python = ">=3.11"  # 3.13 used locally (Homebrew python@3.13)
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.40",
    "transformers>=4.40",
    "torch>=2.0",
    "aiofiles>=23.0",
    "python-dotenv>=1.0",
    "langfuse>=2.0",
    "rank-bm25>=0.2",
    "sentence-transformers>=2.7",
    "sqlmodel>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "orchestration", "evals", "rag"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
